less/content.less
#page {
	position: relative;
}

#content {
	width: 90%;
	max-width: 760px;
	margin: 0 auto;
	padding-top: 20px;
}

.hentry {
	padding: 0 0 50px;
	border-bottom: 1px solid #d7d7d7;
	clear: both;
	margin: 0;
}
.home .hentry,
.archive .hentry,
.search .hentry {
	padding-top: 50px;
}

.entry-summary {
	margin: 0;
}

.entry-header h1 {
	margin: 20px 0;
}

.entry-header h1 a {
	position: relative;
	padding: 10px 0;
	color: #262b30;
}
.entry-header h1 a:hover {
	color: #0079ec;
}

.entry-header h2 {
	font: 600 20px 'Open Sans',Serif;
	color: #b6b6b6;
	margin: 0;
}

.entry-header h2 a {
	color: #b6b6b6;
}
.entry-header h2 a:hover {
	border-bottom: 2px solid #b6b6b6;
}

.entry-header span {
	color: #b6b6b6;
}

@media screen and (max-width: 906px) {
	header .post-format {
		display: none;
	}
}

header .post-format span {
	padding: 5px 10px;
	font-size: 14px;
	border-radius: 4px;
	display: inline-block;
	vertical-align: bottom;
	opacity: 0 !important;
	-webkit-transition: none !important;
	-moz-transition: none !important;
	-o-transition: none !important;
	transition: none !important;
}
header .post-format:hover span {
	opacity: 1 !important;
}

.hentry .entry-summary p {
	margin: 30px 0 0;
}
.hentry .entry-summary blockquote p,
.hentry .entry-summary cite p,
.hentry .entry-summary q p {
	margin:0;
	padding:0
}

.hentry .entry-content > h2:first-child,
.hentry .entry-content > p:first-child {
	margin-top: 0;
}

.hentry .entry-content > p:first-child,
.hentry .entry-content > p:first-of-type {
	font-weight: 600;
	color: #1d1d1d;
}

.wp-caption {
	padding: 0;
	border: 0;
	position: relative;
}
.wp-caption.aligncenter {
	margin: 0 auto 30px;
}
.wp-caption.alignleft,
.wp-caption.alignright {
	max-width: 50%;
	margin: 0 0 30px;
}

.wp-caption img[class*="wp-image-"] {
	max-width: 100%;
	margin: 0 auto;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}

.wp-caption .wp-caption-text {
	padding: 10px 0;
	font: 400 12px 'Open Sans',Serif;
	line-height: 24px;
	border-bottom: 1px solid #dcd8d5;
	text-align: left;
}
@media screen and (min-width: 1140px) {
	.wp-caption.aligncenter .wp-caption-text,
	.wp-caption.alignleft .wp-caption-text,
	.wp-caption.alignright .wp-caption-text {
		padding: 0;
		position: absolute;
		top: 0;
		left: -175px;
		width: 150px;
		padding: 10px 0 10px;
		border-top: 1px solid #dcd8d5;
		margin: 0;
	}
	.wp-caption.aligncenter .wp-caption-text,
	.wp-caption.alignleft .wp-caption-text {
		text-align: right;
	}
	.wp-caption.alignright .wp-caption-text {
		left: auto;
		right: -175px;
	}
}

.wp-caption + p {
	clear: both;
}

.entry-meta {
	margin-top: 20px;
}

